--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
     <main>
         <section id="home">
             <h2>What is E-Waste Management?</h2>
-            <p>Explanation about e-waste management.</p>
+            <p>Welcome to our comprehensive guide on e-waste management! As technology rapidly advances, the accumulation of electronic waste poses significant environmental challenges. 
+                However, the rise of green computing offers a promising solution. Green computing focuses on designing, manufacturing, and disposing of electronic components in an eco-friendly manner. 
+                By prioritizing energy efficiency, reducing harmful emissions, and encouraging recycling, 
+                green computing aims to minimize the environmental impact of our digital devices. 
+                Join us as we explore how sustainable practices in e-waste management and green computing are paving the way for a cleaner, greener future.</p>
         </section>
         <section id="chart">
             <h2>Chart</h2>
             <img src="C:\Users\hp\Pictures\Kaam ki cheeze\Features of health monitoring application.png" alt="Design Thinking 101">
         </section>
         <section id="importance">
-            <h2>Importance and Problem Statement</h2>
+            <h2> </h2>
             <p>Details about the importance and problem statement of e-waste management.</p>
         </section>
         <section id="results">
@@ -39,7 +43,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 E-Waste Management</p>
+        <p>&copy; Improving E-Waste Management</p>
     </footer>
 
     <script src="script.js"></script>
