--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
         <section id="chart">
             <h2>Chart</h2>
-            <img src="C:\Users\hp\Pictures\Kaam ki cheeze\Features of health monitoring application.png" alt="Design Thinking 101">
+            <img src="./public/Main Flowchart For Project X.png" alt="Design Thinking 101">
         </section>
         <section id="importance">
             <h2> </h2>
