--- a/index.html
+++ b/index.html
@@ -8,44 +8,136 @@
 </head>
 <body>
     <header>
-        <h1>E-Waste Management</h1>
-        <nav>
-            <ul>
-                <li><a href="#index">Home</a></li>
-                <li><a href="quiz.html">Quiz</a></li>
-                <li><a href="tips.html">Tips and Suggestions</a></li>
-                <li><a href="charts.html">Charts</a></li>
-            </ul>
-        </nav>
+        <div class="navbar">
+            <h1>E-Waste Management</h1>
+            <nav>
+                <ul>
+                    <li><a href="#intro">Home</a></li>
+                    <li><a href="charts.html">Current Trends</a></li>
+                    <li><a href="quiz.html">Quiz</a></li>
+                    <li><a href="tips.html">Tips and Ideas</a></li>
+                    <li><a href="problems.html">Major Problems</a></li>
+                    <li><a href="solutions.html">Potenial Solutions</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
-        <section id="home">
-            <h2>What is E-Waste Management?</h2>
-            <p>Welcome to our comprehensive guide on e-waste management! As technology rapidly advances, the accumulation of electronic waste poses significant environmental challenges. 
-                However, the rise of green computing offers a promising solution. Green computing focuses on designing, manufacturing, and disposing of electronic components in an eco-friendly manner. 
-                By prioritizing energy efficiency, reducing harmful emissions, and encouraging recycling, 
-                green computing aims to minimize the environmental impact of our digital devices. 
-                Join us as we explore how sustainable practices in e-waste management and green computing are paving the way for a cleaner, greener future.</p>
+        <!-- Full-Screen Image with Overlaid Content -->
+        <section id="intro" class="hero-section">
+            <div class="text-container">
+                <h2>What is E-Waste Management?</h2>
+                <p></p>
+            </div>
         </section>
-        <section id="chart">
-            <h2>Chart</h2>
-            <img src="./public/Main Flowchart For Project X.png" alt="Design Thinking 101">
+
+        <!-- Second Section: Two Animated Content Boxes -->
+        <section id="info">
+            <div class="box-container">
+                <div class="info-box" id="importance">
+                    <h2>Importance of E-Waste Management</h2>
+                    <p>Environmental Protection: Reduces contamination from hazardous substances like lead and mercury that can leach into soil and water.
+                        Public Health: Minimizes health risks associated with exposure to toxic materials from e-waste.
+                        Resource Conservation: Promotes recovery and recycling of valuable materials, reducing the need for raw material extraction.
+                        Sustainability: Supports a circular economy where materials are reused and recycled, fostering long-term environmental sustainability.
+                        Pollution Reduction: Prevents environmental pollution by ensuring safe disposal and management of electronic waste.</p>
+                </div>
+                <div class="info-box" id="strategies">
+                    <h2>What is E-Waste Management?</h2>
+                    <p>E-waste management involves the proper disposal and recycling of electronic devices. As technology evolves, electronic waste becomes a growing issue. Sustainable practices like green computing aim to reduce this waste and its environmental impact. Join us in making a difference by understanding and implementing effective e-waste management strategies.</p>
+                </div>
+            </div>
         </section>
-        <section id="importance">
-            <h2> </h2>
-            <p>Details about the importance and problem statement of e-waste management.</p>
-        </section>
+
+        <!-- Third Section: Split 50-50 with Four Boxes -->
         <section id="results">
-            <h2>Results in Real Time</h2>
-            <p>Real-time results and data about e-waste management.</p>
+            <div class="left-half">
+                <img src="C:/Users/hp/Desktop/DTL/E-Waste-Management/public/side_pic.jpg" alt="E-Waste Image">
+            </div>
+            <div class="right-half">
+                <div class="new-boxes">
+                    <div class="new-box">
+                        <h2>Current Challenges</h2>
+                        <ul>
+                            <li>Rapid increase in e-waste volume due to technology upgrades.</li>
+                            <li>Improper disposal and recycling practices in many regions.</li>
+                            <li>Exposure to hazardous substances like lead and mercury.</li>
+                            <li>Environmental contamination from inadequate recycling methods.</li>
+                        </ul>
+                    </div>
+                    <div class="new-box">
+                        <h2>Health Risks</h2>
+                        <ul>
+                            <li>Health hazards from exposure to toxic chemicals in e-waste.</li>
+                            <li>Increased risk of respiratory and skin diseases.</li>
+                            <li>Unsafe working conditions in informal recycling sectors.</li>
+                            <li>Potential long-term health impacts on nearby communities.</li>
+                        </ul>
+                    </div>
+                    <div class="new-box">
+                        <h2>Regulatory Efforts</h2>
+                        <ul>
+                            <li>Implementation of extended producer responsibility (EPR) schemes.</li>
+                            <li>International agreements like the Basel Convention.</li>
+                            <li>Stricter recycling standards and regulations.</li>
+                            <li>Ongoing efforts to improve enforcement and compliance.</li>
+                        </ul>
+                    </div>
+                    <div class="new-box">
+                        <h2>Future Directions</h2>
+                        <ul>
+                            <li>Advancements in recycling technology for better recovery.</li>
+                            <li>Adoption of circular economy principles and sustainable design.</li>
+                            <li>Increased consumer awareness and participation in recycling programs.</li>
+                            <li>Global cooperation for more effective e-waste management solutions.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Fourth Section: Do's and Don'ts -->
+        <section id="guidelines" class="scroll-animate">
+            <div class="dos-donts">
+                <div class="dos">
+                    <h3>Do's:</h3>
+                    <ul>
+                        <li>Always look for information on the catalogue with your product for end-of-life equipment handling.</li>
+                        <li>Ensure that only Authorized Recyclers repair and handle your electronic products.</li>
+                        <li>Always call our E-waste Authorized Collection Centres/points to Dispose products that have reached end-of-life.</li>
+                        <li>Always drop your used electronic products, batteries or any accessories when they reach the end of their life at your nearest Authorized E-Waste Collection Centres/Points.</li>
+                        <li>Always disconnect the battery from product, and ensure any glass surface is protected against breakage.</li>
+                    </ul>
+                </div>
+                <div class="donts">
+                    <h3>Don'ts:</h3>
+                    <ul>
+                        <li>Do not dismantle your electronic Products on your own.</li>
+                        <li>Do not throw electronics in bins having “Do not Dispose” sign.</li>
+                        <li>Do not give e-waste to informal (Kabbadi) and unorganized sectors like Local Scrap Dealer/ Rag Pickers.</li>
+                        <li>Do not dispose your product in garbage bins along with municipal waste that ultimately reaches landfills.</li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; Improving E-Waste Management</p>
+        <p>&copy; 2024 E-Waste Management. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script>
+        // Scroll animation for the guidelines section
+        window.addEventListener('scroll', function() {
+            var element = document.getElementById('guidelines');
+            var position = element.getBoundingClientRect().top;
+            var screenPosition = window.innerHeight / 1.5;
+
+            if (position < screenPosition) {
+                element.classList.add('visible');
+            }
+        });
+    </script>
 </body>
 </html>
