--- a/quiz.html
+++ b/quiz.html
@@ -1,56 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Waste Management Quiz</title>
-    <link rel="stylesheet" href="styles1.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Electronics Waste Quiz</title>
+    <link rel="stylesheet" href="styles1.css" />
+  </head>
+  <body>
     <header>
-        <h1>E-Waste Management Quiz</h1>
+      <div class="navbar">
+        <h1>E-Waste Management</h1>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="quiz.html">Quiz</a></li>
-                <li><a href="tips.html">Tips and Ideas</a></li>
-                <li><a href="charts.html">Charts and Graphs</a></li>
-            </ul>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="charts.html">Current Trends</a></li>
+            <li><a href="quiz.html">Quiz</a></li>
+            <li><a href="tips.html">Tips and Ideas</a></li>
+            <li><a href="problems.html">Major Problems</a></li>
+            <li><a href="solutions.html">Potenial Solutions</a></li>
+          </ul>
         </nav>
+      </div>
     </header>
 
-    
-    <!-- Quiz Section -->
-    <section class="quiz-section">
-        <h2>Test Your Knowledge</h2>
-        <div class="quiz-container">
-            <!-- Question 1 -->
-            <div class="quiz-question">
-                <p>Question 1: What is the capital of France?</p>
-                <ul class="quiz-options">
-                    <li data-correct="false">Berlin</li>
-                    <li data-correct="true">Paris</li>
-                    <li data-correct="false">Madrid</li>
-                    <li data-correct="false">Rome</li>
-                </ul>
-            </div>
-
-            <!-- Question 2 -->
-            <div class="quiz-question">
-                <p>Question 2: Which planet is known as the Red Planet?</p>
-                <ul class="quiz-options">
-                    <li data-correct="false">Venus</li>
-                    <li data-correct="true">Mars</li>
-                    <li data-correct="false">Jupiter</li>
-                    <li data-correct="false">Saturn</li>
-                </ul>
-            </div>
-
-            <!-- Add more questions here -->
-
+    <div class="quiz-container">
+      <div id="question-container">
+        <h2 id="question">Question Text</h2>
+        <div id="options">
+          <!-- Options will be dynamically inserted here -->
         </div>
-    </section>
+        <p id="explanation" class="hidden"></p>
+        <button id="next-btn" class="hidden">Next</button>
+      </div>
+    </div>
 
-    <script src="script.js"></script> <!-- Link to your JavaScript file -->
-</body>
+    <script src="script2.js"></script>
+  </body>
 </html>
