--- a/problems.html
+++ b/problems.html
@@ -11,10 +11,10 @@
     <!-- Header and Navbar -->
     <header>
         <div class="navbar">
-            <h1>Your Website</h1>
+            <h1>Major Problems</h1>
             <nav>
                 <ul>
-                    <li><a href="#intro">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="charts.html">Current Trends</a></li>
                     <li><a href="quiz.html">Quiz</a></li>
                     <li><a href="tips.html">Tips and Ideas</a></li>
@@ -26,10 +26,10 @@
     </header>
 
     <!-- Hero Section (Optional) -->
-    <section class="hero-section">
+    <section class="hero-section2">
         <div class="text-container">
             <h2>Challenges in E-Waste Management</h2>
-            <p>Understanding the key problems faced in managing electronic waste effectively.</p>
+            <p>E waste collection and management is a rather complex and long process, from segregation to restoring the useful components</p>
         </div>
     </section>
 
@@ -57,6 +57,24 @@
             </div>
         </div>
     </main>
+    <!-- second Content Section -->
+    <section class="problems-new-section">
+        <div class="left-half">
+            <img src="path_to_your_image.jpg" alt="Descriptive Alt Text">
+        </div>
+        <div class="right-half">
+            <div class="text-box">
+                <h3>Subheading 1</h3>
+                <p>Your text content here...</p>
+            </div>
+            <div class="text-box">
+                <h3>Subheading 2</h3>
+                <p>Your text content here...</p>
+            </div>
+            <!-- Add more text boxes as needed -->
+        </div>
+    </section>
+    
 
     <!-- Footer -->
     <footer>
