--- a/charts.html
+++ b/charts.html
@@ -13,9 +13,11 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="quiz.html">Quiz</a></li>
-                <li><a href="tips.html">Tips and Suggestions</a></li>
-                <li><a href="charts.html">Charts and Graphs</a></li>
+                    <li><a href="charts.html">Current Trends</a></li>
+                    <li><a href="quiz.html">Quiz</a></li>
+                    <li><a href="tips.html">Tips and Ideas</a></li>
+                    <li><a href="problems.html">Major Problems</a></li>
+                    <li><a href="solutions.html">Contacts</a></li>
             </ul>
         </nav>
     </header>
