--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="quiz.html">Quiz</a></li>
                     <li><a href="tips.html">Tips and Ideas</a></li>
                     <li><a href="problems.html">Major Problems</a></li>
-                    <li><a href="solutions.html">Potenial Solutions</a></li>
+                    <li><a href="solutions.html">Contacts</a></li>
                 </ul>
             </nav>
         </div>
