--- a/problems.html
+++ b/problems.html
@@ -19,7 +19,7 @@
                     <li><a href="quiz.html">Quiz</a></li>
                     <li><a href="tips.html">Tips and Ideas</a></li>
                     <li><a href="problems.html">Major Problems</a></li>
-                    <li><a href="solutions.html">Potenial Solutions</a></li>
+                    <li><a href="solutions.html">Contacts</a></li>
                 </ul>
             </nav>
         </div>
@@ -60,16 +60,22 @@
     <!-- second Content Section -->
     <section class="problems-new-section">
         <div class="left-half">
-            <img src="path_to_your_image.jpg" alt="Descriptive Alt Text">
+            <img src="C:\Users\hp\Desktop\DTL\E-Waste-Management\public\side_pic_problems.png"s alt="Descriptive Alt Text">
         </div>
         <div class="right-half">
             <div class="text-box">
-                <h3>Subheading 1</h3>
-                <p>Your text content here...</p>
+                <h3>Lack of E-Waste Awareness</h3>
+                <p>The general public and many small businesses lack awareness regarding the environmental and health hazards posed by improper disposal of e-waste. Many people are unaware of the importance of recycling e-waste, leading to hazardous materials being dumped in landfills or openly burned, releasing toxic substances into the environment.
+                    <br>Government Body Addressing the Problem:</br>
+                    <br>Ministry of Environment, Forest and Climate Change (MoEFCC): </br>
+                    <br>Central Pollution Control Board (CPCB): </br></p>
             </div>
             <div class="text-box">
-                <h3>Subheading 2</h3>
-                <p>Your text content here...</p>
+                <h3>Informal Sector Involvement in E-Waste Recycling</h3>
+                <p><br>A significant portion of e-waste recycling in India is handled by the informal sector, which lacks the necessary infrastructure and knowledge to safely extract valuable materials. This leads to unsafe practices like acid baths and open-air burning, which not only harm the environment but also pose serious health risks to workers in the sector.</br>
+                    <br>Government Body Addressing the Problem:</br>
+                    <br>Ministry of Electronics and Information Technology (MeitY) </br>
+                    <br>State Pollution Control Boards (SPCBs)</br></p>
             </div>
             <!-- Add more text boxes as needed -->
         </div>
