--- a/tips.html
+++ b/tips.html
@@ -8,18 +8,20 @@
 </head>
 <body>
     <header>
-        <h1>E-Waste Management</h1>
-        <nav>
+        <div class="navbar">
+          <h1>E-Waste Management</h1>
+          <nav>
             <ul>
-                <li><a href="#intro">Home</a></li>
-                <li><a href="charts.html">Current Trends</a></li>
-                <li><a href="quiz.html">Quiz</a></li>
-                <li><a href="tips.html">Tips and Ideas</a></li>
-                <li><a href="problems.html">Major Problems</a></li>
-                <li><a href="solutions.html">Potenial Solutions</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="charts.html">Current Trends</a></li>
+              <li><a href="quiz.html">Quiz</a></li>
+              <li><a href="tips.html">Tips and Ideas</a></li>
+              <li><a href="problems.html">Major Problems</a></li>
+              <li><a href="solutions.html">Contacts</a></li>
             </ul>
-        </nav>
-    </header>
+          </nav>
+        </div>
+      </header>
     <main>
         <section class="tips-section">
             <h1>Tips and Suggestions for E-Waste Management</h1>
