--- a/problems.html
+++ b/problems.html
@@ -17,8 +17,9 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="charts.html">Current Trends</a></li>
                     <li><a href="quiz.html">Quiz</a></li>
-                    <li><a href="tips.html">Tips and Ideas</a></li>
+                    
                     <li><a href="problems.html">Major Problems</a></li>
+                    <li><a href="tips.html">Tips and Ideas</a></li>
                     <li><a href="solutions.html">Contacts</a></li>
                 </ul>
             </nav>
@@ -60,7 +61,7 @@
     <!-- second Content Section -->
     <section class="problems-new-section">
         <div class="left-half">
-            <img src="C:\Users\hp\Desktop\DTL\E-Waste-Management\public\side_pic_problems.png"s alt="Descriptive Alt Text">
+            <img src="public/side_pic_problems.png"s alt="Descriptive Alt Text">
         </div>
         <div class="right-half">
             <div class="text-box">
