--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
             <h1>E-Waste Management</h1>
             <nav>
                 <ul>
-                    <li><a href="#intro">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="charts.html">Current Trends</a></li>
                     <li><a href="quiz.html">Quiz</a></li>
-                    <li><a href="tips.html">Tips and Ideas</a></li>
+                    
                     <li><a href="problems.html">Major Problems</a></li>
+                    <li><a href="tips.html">Tips and Ideas</a></li>
                     <li><a href="solutions.html">Contacts</a></li>
                 </ul>
             </nav>
