--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- Third Section: Split 50-50 with Four Boxes -->
         <section id="results">
             <div class="left-half">
-                <img src="C:/Users/hp/Desktop/DTL/E-Waste-Management/public/side_pic.jpg" alt="E-Waste Image">
+                <img src="public/side_pic_problems.png" alt="E-Waste Image">
             </div>
             <div class="right-half">
                 <div class="new-boxes">
